# ngm

./: .gitignore  LICENSE  README.md  assumptions.md  pyproject.toml  scrapy.cfg
.github/workflows/: ciaa-annual-reports-scraper.yml  district-court-scraper.yml  kanun-patrika-scraper.yml  special-court-scraper.yml  supreme-court-scraper.yml
etc/: create_ro_user.py
ngm/database/: models.py
ngm/ngscrape/: constants.py  pipelines.py  settings.py
ngm/ngscrape/spiders/: ciaa_annual_reports.py  district_court_cases.py  high_court_cases.py  kanun_patrika.py  special_case_enrichment.py  special_court_cases.py  supreme_case_enrichment.py  supreme_court_cases.py  supreme_court_orders.py
ngm/scrapers/: config.py
ngm/scrapers/judicial/: district_court_cases.py  kanun_patrika.py
ngm/scripts/: __init__.py  init_courts.py
ngm/utils/: court_ids.py  db_helpers.py  district_map.py  normalizer.py
